<resources>
    <string name="app_name">Alarm_Managerv1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="alarm_fragment">Hello blank fragment</string>
    <string name="Work_Clock_fragment">Hello Work clock fragment</string>
    <string name="Stop_Watch_fragment">Hello Stop fragment</string>
    <string name="Timeer_fragment">Hello Timer fragment</string>
    <string name="Vibaration">Vibration</string>
    <string name="Volume">Volume</string>
    <string name="Curent_song">Current song selected</string>
    <string name="Back">Back</string>
    <string name="Cancel">Cancel</string>
    <string name="Save">Save</string>
    <string name="Addalarm">Add alarm</string>
    <string name="Time">Time</string>
    <string name="Label">Label</string>
    <string name="Sound">Sound</string>
    <string name="Snooze">Snooze</string>
    <string name="Repeat">Repeat</string>
    <string name="Alarm">Alarm</string>
    <string name="WorkClock">World Clock</string>


</resources>