<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddAlarm"
    android:background="@color/color_background">
    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="10dp"
        >
        <RelativeLayout
            android:padding="10dp"
            android:background="#3C3B3B"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/real_sound_tilte">
            <ImageView
                android:id="@+id/img_back_activiti_sound"
                android:layout_width="20dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_baseline_arrow_back_ios_24"/>
            <TextView
                android:id="@+id/cancel_action_addalarm"
                android:layout_marginTop="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:layout_toRightOf="@+id/img_back_activiti_sound"
                android:text="@string/Cancel"
                android:textColor="@color/color_itemnavigation"/>
            <TextView
                android:layout_centerHorizontal="true"
                android:layout_marginTop="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:text="@string/Addalarm"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/save_action_addalarm"
                android:layout_marginRight="10dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="2dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:text="@string/Save"
                android:textColor="@color/color_itemnavigation"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:id="@+id/real_timeset"
        android:background="@color/color_background"
        android:padding="20dp"
        android:layout_below="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="180dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Time"
            android:textColor="@color/white"
            android:textSize="25dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"/>
        <LinearLayout
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/edt_set_timealarm"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:inputType="number"
               />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
                android:textColor="@color/white"
                android:textSize="25dp"/>
            <EditText
                android:id="@+id/edt_set_timealarm_minutes"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:inputType="number"
               />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:background="@color/color_background_view"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_below="@+id/real_timeset"
        android:layout_marginTop="-2dp">
        <LinearLayout
            android:background="@color/color_background_view"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/l1"
                android:padding="10dp">

                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_alignParentLeft="true"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:text="@string/Repeat" />

                <TextView
                    android:id="@+id/swi"
                    android:layout_marginRight="10dp"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="phong"
                    android:textColor="#5C5757"
                    android:textSize="20dp"
                    />
            </RelativeLayout>

            <View
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#B3B2B2" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/l2"
                android:padding="10dp">

                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_alignParentLeft="true"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:text="@string/Label" />
                <TextView
                    android:layout_marginRight="10dp"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="phong"
                    android:textColor="#5C5757"
                    android:textSize="20dp"
                    />


            </RelativeLayout>

            <View
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#B3B2B2" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/l3"
                android:padding="10dp">

                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_alignParentLeft="true"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:text="@string/Sound" />

                <TextView
                    android:layout_marginRight="10dp"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:text="IphoneX"
                    android:textColor="#5C5757" />

            </RelativeLayout>
            <View
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#B3B2B2" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_alignParentLeft="true"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:text="@string/Vibaration" />

                <Switch
                    android:id="@+id/switch_vibration"
                    android:layout_marginRight="10dp"
                    android:layout_alignParentRight="true"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:shadowColor="@color/purple_700" />
            </RelativeLayout>
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>